--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/brand-icon-latest.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sandeep Portfolio</title>
+    <meta
+      name="description"
+      content="Sandeep Madiki's professional portfolio. Full Stack Developer skilled in React, Node.js, TypeScript, and more. Explore projects, experience, and contact information."
+    />
+    <meta
+      name="keywords"
+      content="Sandeep Madiki, Portfolio, Full Stack Developer, React, Node.js, TypeScript, JavaScript, Web Developer, Projects, Experience"
+    />
+    <meta name="author" content="Sandeep Madiki" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Sandeep Portfolio" />
+    <meta
+      property="og:description"
+      content="Sandeep Madiki's professional portfolio. Full Stack Developer skilled in React, Node.js, TypeScript, and more."
+    />
+    <meta property="og:image" content="/src/assets/brand-logo-latest.png" />
+    <meta
+      property="og:url"
+      content="https://sandeep-portfolio-hazel.vercel.app/"
+    />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sandeep Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Sandeep Madiki's professional portfolio. Full Stack Developer skilled in React, Node.js, TypeScript, and more."
+    />
+    <meta name="twitter:image" content="/src/assets/brand-logo-latest.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
